clap_derive/tests/ui/tuple_struct.stderr
error: `#[derive(Clap)]` only supports non-tuple structs and enums
  --> $DIR/tuple_struct.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^
